--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,242 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: #ffffff;
+}
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 90px;
+  margin-top: 136px;
+}
+h1 {
+  font-weight: 500;
+  font-size: 47px;
+  line-height: 55px;
+  margin-bottom: 5px;
+}
+h2 {
+  font-weight: 400;
+  font-size: 15px;
+}
+.wrapper {
+  width: 394px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+.container {
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.form-group {
+  position: relative;
+  height: 62px;
+}
+input {
+  width: 100%;
+  border: none;
+  display: block;
+  position: relative;
+  z-index: 1;
+  border-bottom: 1px solid #dedede;
+  font-family: "Roboto", sans-serif;
+  font-weight: lighter;
+  padding-bottom: 9px;
+  font-size: 15px;
+  line-height: 18px;
+}
+input::placeholder {
+  color: #1c1c1c;
+  font-size: 15px;
+  line-height: 18px;
+}
+input ~ label {
+  transform: translateY(-25px);
+  transition: 0.5s;
+  position: absolute;
+  display: block;
+  z-index: 2;
+  font-size: 15px;
+  line-height: 18px;
+  color: #939292;
+}
+input:hover,
+input:focus,
+input:active:focus {
+  color: #1c1c1c;
+  font-size: 15px;
+  line-height: 18px;
+  outline: none;
+  border-bottom: 1px solid #1c1c1c;
+}
+input:hover ~ label,
+input:focus ~ label,
+input:active:focus ~ label,
+label:hover,
+input:not(:placeholder-shown) ~ label {
+  position: absolute;
+  transform: translateY(-50px);
+  font-size: 12px;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus input:-webkit-autofill {
+  transition: background-color 5000s ease-in-out 0s;
+  background: -webkit-linear-gradient(
+    top,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(0, 174, 255, 0.04) 50%,
+    rgba(255, 255, 255, 0) 51%,
+    rgba(0, 174, 255, 0.03) 100%
+  );
+}
+.form-group--check {
+  display: flex;
+}
+.pass-eye {
+  position: relative;
+  visibility: hidden;
+  z-index: 1;
+}
+.pass-eye:before {
+  content: "";
+  background-image: url("img/group.svg");
+  position: absolute;
+  top: -21px;
+  right: 0;
+  width: 19px;
+  height: 14px;
+  display: block;
+  visibility: visible;
+}
+.rules {
+  display: none;
+}
+input:focus:invalid {
+  border-bottom: 1px solid #d00000;
+  color: #d00000;
+}
+.rules ~ label {
+  font-size: 13px;
+  line-height: 16px;
+  position: relative;
+  padding-left: 30px;
+  color: #000;
+}
+.rules ~ label::before {
+  content: "";
+  position: relative;
+  top: 16px;
+  left: -30px;
+  width: 17px;
+  height: 17px;
+  border: 1px solid #dedede;
+  display: block;
+}
+.form-group--check {
+  margin-top: 40px;
+  height: auto;
+  margin-bottom: 36px;
+}
+.form-group--check input:checked ~ label::after {
+  content: "";
+  position: relative;
+  top: -15px;
+  left: -26px;
+  width: 11px;
+  height: 11px;
+  background-color: #1c1c1c;
+  display: block;
+}
+.btn {
+  width: 100%;
+  background: #1c1c1c;
+  font-size: 17px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #fff;
+  outline: none;
+  border: none;
+  padding-top: 12px;
+  padding-bottom: 12px;
   text-align: center;
+  vertical-align: center;
+  margin-bottom: 30px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn:hover {
+  background: #474747;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.btn:disabled {
+  background-color: #dedede;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn:active {
+  background-color: #8b8b8b;
+}
+.tologin {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 130px;
+}
+.tologin p {
+  padding-right: 10px;
+  color: #939292;
+}
+.tologin a {
+  text-decoration: none;
+  color: #000;
+  font-weight: 600;
+}
+.tologin a:hover {
+  color: #474747;
+}
+.tologin a:active {
+  color: #8b8b8b;
+}
+.succsess {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: fixed;
+  top: 0;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  background: #fff;
+  height: 100%;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  transform: scale(0.8);
 }
-
-.App-link {
-  color: #61dafb;
+.succsess-transition {
+  opacity: 1;
+  z-index: 3;
+  transform: scale(1);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.succsess p {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 47px;
+  margin-top: 123px;
+}
+.error {
+  text-align: right;
+  position: relative;
+  top: -18px;
+  font-size: 13px;
+  color: #d00000;
+}
+.error-hide {
+  display: none;
 }
